PRODEV-2751 Fixed bluish color on safari mobile

--- a/src/components/RideTo/ResultPage/ResultsHeader/styles.scss
+++ b/src/components/RideTo/ResultPage/ResultsHeader/styles.scss
@@ -185,6 +185,12 @@
   height: 54px;
   @media (max-width: 769px) {
     height: 40px;
+    *,
+    *:visited,
+    *::before,
+    *::after {
+      color: inherit !important;
+    }
   }
 }
 
